--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,12 +31,13 @@ jobs:
         run: chmod +x ./bookmarker-api/mvnw
 
       - name: Build with Maven
-        run: ./bookmarker-api/mvnw verify
+        working-directory: ./bookmarker-api
+        run: ./mvnw verify
 
       - if: ${{ github.ref == 'refs/heads/main' }}
         name: Build and Publish Docker Image
+        working-directory: ./bookmarker-api
         run: |
-          cd bookmarker-api
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
           docker build -t ${{ secrets.DOCKER_USERNAME }}/bookmarker-api .
           docker push ${{ secrets.DOCKER_USERNAME }}/bookmarker-api
